parser/y.output
Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program funcdef ';'

    3 funcdef: ID '(' maybepars ')' maybestats END

    4 maybepars: %empty
    5          | pars

    6 pars: ID
    7     | pars ',' ID

    8 maybestats: %empty
    9           | stats

   10 stats: stat ';'
   11      | stats stat ';'

   12 stat: RETURN expr
   13     | cond
   14     | VAR ID '=' expr
   15     | ID '=' expr

   16 cond: maybelabeldef COND maybeguards END

   17 maybelabeldef: %empty
   18              | ID ':'

   19 maybeguards: %empty
   20            | guards

   21 guards: guarded ';'
   22       | guards guarded ';'

   23 guarded: guard stats control

   24 guard: expr GUARD
   25      | GUARD

   26 control: CONTINUE
   27        | CONTINUE ID
   28        | BREAK
   29        | BREAK ID

   30 expr: term
   31     | nhtis
   32     | plusterms
   33     | multterms
   34     | orterms
   35     | dotterms
   36     | term gteqeqminus term

   37 nhtis: nhti term
   38      | nhtis nhti

   39 nhti: NOT
   40     | HEAD
   41     | TAIL
   42     | ISLIST

   43 plusterms: term '+' term
   44          | plusterms '+' term

   45 multterms: term '*' term
   46          | multterms '*' term

   47 orterms: term OR term
   48        | orterms OR term

   49 dotterms: term '.' term
   50         | dotterms '.' term

   51 gteqeqminus: GREQ
   52            | '='
   53            | '-'

   54 term: '(' expr ')'
   55     | NUM
   56     | ID
   57     | ID '(' maybeparams ')'

   58 maybeparams: %empty
   59            | params

   60 params: expr
   61       | params ',' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 54 57
')' (41) 3 54 57
'*' (42) 45 46
'+' (43) 43 44
',' (44) 7 61
'-' (45) 53
'.' (46) 49 50
':' (58) 18
';' (59) 2 10 11 21 22
'=' (61) 14 15 52
error (256)
END (258) 3 16
RETURN (259) 12
VAR (260) 14
COND (261) 16
CONTINUE (262) 26 27
BREAK (263) 28 29
NOT (264) 39
HEAD (265) 40
TAIL (266) 41
ISLIST (267) 42
OR (268) 47 48
GUARD (269) 24 25
GREQ (270) 51
ID (271) 3 6 7 14 15 18 27 29 56 57
NUM (272) 55


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 1 2, on right: 0 2
funcdef (30)
    on left: 3, on right: 2
maybepars (31)
    on left: 4 5, on right: 3
pars (32)
    on left: 6 7, on right: 5 7
maybestats (33)
    on left: 8 9, on right: 3
stats (34)
    on left: 10 11, on right: 9 11 23
stat (35)
    on left: 12 13 14 15, on right: 10 11
cond (36)
    on left: 16, on right: 13
maybelabeldef (37)
    on left: 17 18, on right: 16
maybeguards (38)
    on left: 19 20, on right: 16
guards (39)
    on left: 21 22, on right: 20 22
guarded (40)
    on left: 23, on right: 21 22
guard (41)
    on left: 24 25, on right: 23
control (42)
    on left: 26 27 28 29, on right: 23
expr (43)
    on left: 30 31 32 33 34 35 36, on right: 12 14 15 24 54 60 61
nhtis (44)
    on left: 37 38, on right: 31 38
nhti (45)
    on left: 39 40 41 42, on right: 37 38
plusterms (46)
    on left: 43 44, on right: 32 44
multterms (47)
    on left: 45 46, on right: 33 46
orterms (48)
    on left: 47 48, on right: 34 48
dotterms (49)
    on left: 49 50, on right: 35 50
gteqeqminus (50)
    on left: 51 52 53, on right: 36
term (51)
    on left: 54 55 56 57, on right: 30 36 37 43 44 45 46 47 48 49 50
maybeparams (52)
    on left: 58 59, on right: 57
params (53)
    on left: 60 61, on right: 59 61


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    2 program: program . funcdef ';'

    $end  shift, and go to state 2
    ID    shift, and go to state 3

    funcdef  go to state 4


State 2

    0 $accept: program $end .

    $default  accept


State 3

    3 funcdef: ID . '(' maybepars ')' maybestats END

    '('  shift, and go to state 5


State 4

    2 program: program funcdef . ';'

    ';'  shift, and go to state 6


State 5

    3 funcdef: ID '(' . maybepars ')' maybestats END

    ID  shift, and go to state 7

    $default  reduce using rule 4 (maybepars)

    maybepars  go to state 8
    pars       go to state 9


State 6

    2 program: program funcdef ';' .

    $default  reduce using rule 2 (program)


State 7

    6 pars: ID .

    $default  reduce using rule 6 (pars)


State 8

    3 funcdef: ID '(' maybepars . ')' maybestats END

    ')'  shift, and go to state 10


State 9

    5 maybepars: pars .
    7 pars: pars . ',' ID

    ','  shift, and go to state 11

    $default  reduce using rule 5 (maybepars)


State 10

    3 funcdef: ID '(' maybepars ')' . maybestats END

    RETURN  shift, and go to state 12
    VAR     shift, and go to state 13
    ID      shift, and go to state 14

    COND      reduce using rule 17 (maybelabeldef)
    $default  reduce using rule 8 (maybestats)

    maybestats     go to state 15
    stats          go to state 16
    stat           go to state 17
    cond           go to state 18
    maybelabeldef  go to state 19


State 11

    7 pars: pars ',' . ID

    ID  shift, and go to state 20


State 12

   12 stat: RETURN . expr

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    expr       go to state 28
    nhtis      go to state 29
    nhti       go to state 30
    plusterms  go to state 31
    multterms  go to state 32
    orterms    go to state 33
    dotterms   go to state 34
    term       go to state 35


State 13

   14 stat: VAR . ID '=' expr

    ID  shift, and go to state 36


State 14

   15 stat: ID . '=' expr
   18 maybelabeldef: ID . ':'

    '='  shift, and go to state 37
    ':'  shift, and go to state 38


State 15

    3 funcdef: ID '(' maybepars ')' maybestats . END

    END  shift, and go to state 39


State 16

    9 maybestats: stats .
   11 stats: stats . stat ';'

    RETURN  shift, and go to state 12
    VAR     shift, and go to state 13
    ID      shift, and go to state 14

    COND      reduce using rule 17 (maybelabeldef)
    $default  reduce using rule 9 (maybestats)

    stat           go to state 40
    cond           go to state 18
    maybelabeldef  go to state 19


State 17

   10 stats: stat . ';'

    ';'  shift, and go to state 41


State 18

   13 stat: cond .

    $default  reduce using rule 13 (stat)


State 19

   16 cond: maybelabeldef . COND maybeguards END

    COND  shift, and go to state 42


State 20

    7 pars: pars ',' ID .

    $default  reduce using rule 7 (pars)


State 21

   39 nhti: NOT .

    $default  reduce using rule 39 (nhti)


State 22

   40 nhti: HEAD .

    $default  reduce using rule 40 (nhti)


State 23

   41 nhti: TAIL .

    $default  reduce using rule 41 (nhti)


State 24

   42 nhti: ISLIST .

    $default  reduce using rule 42 (nhti)


State 25

   54 term: '(' . expr ')'

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    expr       go to state 43
    nhtis      go to state 29
    nhti       go to state 30
    plusterms  go to state 31
    multterms  go to state 32
    orterms    go to state 33
    dotterms   go to state 34
    term       go to state 35


State 26

   56 term: ID .
   57     | ID . '(' maybeparams ')'

    '('  shift, and go to state 44

    $default  reduce using rule 56 (term)


State 27

   55 term: NUM .

    $default  reduce using rule 55 (term)


State 28

   12 stat: RETURN expr .

    $default  reduce using rule 12 (stat)


State 29

   31 expr: nhtis .
   38 nhtis: nhtis . nhti

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24

    $default  reduce using rule 31 (expr)

    nhti  go to state 45


State 30

   37 nhtis: nhti . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 46


State 31

   32 expr: plusterms .
   44 plusterms: plusterms . '+' term

    '+'  shift, and go to state 47

    $default  reduce using rule 32 (expr)


State 32

   33 expr: multterms .
   46 multterms: multterms . '*' term

    '*'  shift, and go to state 48

    $default  reduce using rule 33 (expr)


State 33

   34 expr: orterms .
   48 orterms: orterms . OR term

    OR  shift, and go to state 49

    $default  reduce using rule 34 (expr)


State 34

   35 expr: dotterms .
   50 dotterms: dotterms . '.' term

    '.'  shift, and go to state 50

    $default  reduce using rule 35 (expr)


State 35

   30 expr: term .
   36     | term . gteqeqminus term
   43 plusterms: term . '+' term
   45 multterms: term . '*' term
   47 orterms: term . OR term
   49 dotterms: term . '.' term

    OR    shift, and go to state 51
    '='   shift, and go to state 52
    '+'   shift, and go to state 53
    '*'   shift, and go to state 54
    '.'   shift, and go to state 55
    GREQ  shift, and go to state 56
    '-'   shift, and go to state 57

    $default  reduce using rule 30 (expr)

    gteqeqminus  go to state 58


State 36

   14 stat: VAR ID . '=' expr

    '='  shift, and go to state 59


State 37

   15 stat: ID '=' . expr

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    expr       go to state 60
    nhtis      go to state 29
    nhti       go to state 30
    plusterms  go to state 31
    multterms  go to state 32
    orterms    go to state 33
    dotterms   go to state 34
    term       go to state 35


State 38

   18 maybelabeldef: ID ':' .

    $default  reduce using rule 18 (maybelabeldef)


State 39

    3 funcdef: ID '(' maybepars ')' maybestats END .

    $default  reduce using rule 3 (funcdef)


State 40

   11 stats: stats stat . ';'

    ';'  shift, and go to state 61


State 41

   10 stats: stat ';' .

    $default  reduce using rule 10 (stats)


State 42

   16 cond: maybelabeldef COND . maybeguards END

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    GUARD   shift, and go to state 62
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    $default  reduce using rule 19 (maybeguards)

    maybeguards  go to state 63
    guards       go to state 64
    guarded      go to state 65
    guard        go to state 66
    expr         go to state 67
    nhtis        go to state 29
    nhti         go to state 30
    plusterms    go to state 31
    multterms    go to state 32
    orterms      go to state 33
    dotterms     go to state 34
    term         go to state 35


State 43

   54 term: '(' expr . ')'

    ')'  shift, and go to state 68


State 44

   57 term: ID '(' . maybeparams ')'

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    $default  reduce using rule 58 (maybeparams)

    expr         go to state 69
    nhtis        go to state 29
    nhti         go to state 30
    plusterms    go to state 31
    multterms    go to state 32
    orterms      go to state 33
    dotterms     go to state 34
    term         go to state 35
    maybeparams  go to state 70
    params       go to state 71


State 45

   38 nhtis: nhtis nhti .

    $default  reduce using rule 38 (nhtis)


State 46

   37 nhtis: nhti term .

    $default  reduce using rule 37 (nhtis)


State 47

   44 plusterms: plusterms '+' . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 72


State 48

   46 multterms: multterms '*' . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 73


State 49

   48 orterms: orterms OR . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 74


State 50

   50 dotterms: dotterms '.' . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 75


State 51

   47 orterms: term OR . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 76


State 52

   52 gteqeqminus: '=' .

    $default  reduce using rule 52 (gteqeqminus)


State 53

   43 plusterms: term '+' . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 77


State 54

   45 multterms: term '*' . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 78


State 55

   49 dotterms: term '.' . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 79


State 56

   51 gteqeqminus: GREQ .

    $default  reduce using rule 51 (gteqeqminus)


State 57

   53 gteqeqminus: '-' .

    $default  reduce using rule 53 (gteqeqminus)


State 58

   36 expr: term gteqeqminus . term

    '('  shift, and go to state 25
    ID   shift, and go to state 26
    NUM  shift, and go to state 27

    term  go to state 80


State 59

   14 stat: VAR ID '=' . expr

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    expr       go to state 81
    nhtis      go to state 29
    nhti       go to state 30
    plusterms  go to state 31
    multterms  go to state 32
    orterms    go to state 33
    dotterms   go to state 34
    term       go to state 35


State 60

   15 stat: ID '=' expr .

    $default  reduce using rule 15 (stat)


State 61

   11 stats: stats stat ';' .

    $default  reduce using rule 11 (stats)


State 62

   25 guard: GUARD .

    $default  reduce using rule 25 (guard)


State 63

   16 cond: maybelabeldef COND maybeguards . END

    END  shift, and go to state 82


State 64

   20 maybeguards: guards .
   22 guards: guards . guarded ';'

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    GUARD   shift, and go to state 62
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    $default  reduce using rule 20 (maybeguards)

    guarded    go to state 83
    guard      go to state 66
    expr       go to state 67
    nhtis      go to state 29
    nhti       go to state 30
    plusterms  go to state 31
    multterms  go to state 32
    orterms    go to state 33
    dotterms   go to state 34
    term       go to state 35


State 65

   21 guards: guarded . ';'

    ';'  shift, and go to state 84


State 66

   23 guarded: guard . stats control

    RETURN  shift, and go to state 12
    VAR     shift, and go to state 13
    ID      shift, and go to state 14

    $default  reduce using rule 17 (maybelabeldef)

    stats          go to state 85
    stat           go to state 17
    cond           go to state 18
    maybelabeldef  go to state 19


State 67

   24 guard: expr . GUARD

    GUARD  shift, and go to state 86


State 68

   54 term: '(' expr ')' .

    $default  reduce using rule 54 (term)


State 69

   60 params: expr .

    $default  reduce using rule 60 (params)


State 70

   57 term: ID '(' maybeparams . ')'

    ')'  shift, and go to state 87


State 71

   59 maybeparams: params .
   61 params: params . ',' expr

    ','  shift, and go to state 88

    $default  reduce using rule 59 (maybeparams)


State 72

   44 plusterms: plusterms '+' term .

    $default  reduce using rule 44 (plusterms)


State 73

   46 multterms: multterms '*' term .

    $default  reduce using rule 46 (multterms)


State 74

   48 orterms: orterms OR term .

    $default  reduce using rule 48 (orterms)


State 75

   50 dotterms: dotterms '.' term .

    $default  reduce using rule 50 (dotterms)


State 76

   47 orterms: term OR term .

    $default  reduce using rule 47 (orterms)


State 77

   43 plusterms: term '+' term .

    $default  reduce using rule 43 (plusterms)


State 78

   45 multterms: term '*' term .

    $default  reduce using rule 45 (multterms)


State 79

   49 dotterms: term '.' term .

    $default  reduce using rule 49 (dotterms)


State 80

   36 expr: term gteqeqminus term .

    $default  reduce using rule 36 (expr)


State 81

   14 stat: VAR ID '=' expr .

    $default  reduce using rule 14 (stat)


State 82

   16 cond: maybelabeldef COND maybeguards END .

    $default  reduce using rule 16 (cond)


State 83

   22 guards: guards guarded . ';'

    ';'  shift, and go to state 89


State 84

   21 guards: guarded ';' .

    $default  reduce using rule 21 (guards)


State 85

   11 stats: stats . stat ';'
   23 guarded: guard stats . control

    RETURN    shift, and go to state 12
    VAR       shift, and go to state 13
    CONTINUE  shift, and go to state 90
    BREAK     shift, and go to state 91
    ID        shift, and go to state 14

    $default  reduce using rule 17 (maybelabeldef)

    stat           go to state 40
    cond           go to state 18
    maybelabeldef  go to state 19
    control        go to state 92


State 86

   24 guard: expr GUARD .

    $default  reduce using rule 24 (guard)


State 87

   57 term: ID '(' maybeparams ')' .

    $default  reduce using rule 57 (term)


State 88

   61 params: params ',' . expr

    NOT     shift, and go to state 21
    HEAD    shift, and go to state 22
    TAIL    shift, and go to state 23
    ISLIST  shift, and go to state 24
    '('     shift, and go to state 25
    ID      shift, and go to state 26
    NUM     shift, and go to state 27

    expr       go to state 93
    nhtis      go to state 29
    nhti       go to state 30
    plusterms  go to state 31
    multterms  go to state 32
    orterms    go to state 33
    dotterms   go to state 34
    term       go to state 35


State 89

   22 guards: guards guarded ';' .

    $default  reduce using rule 22 (guards)


State 90

   26 control: CONTINUE .
   27        | CONTINUE . ID

    ID  shift, and go to state 94

    $default  reduce using rule 26 (control)


State 91

   28 control: BREAK .
   29        | BREAK . ID

    ID  shift, and go to state 95

    $default  reduce using rule 28 (control)


State 92

   23 guarded: guard stats control .

    $default  reduce using rule 23 (guarded)


State 93

   61 params: params ',' expr .

    $default  reduce using rule 61 (params)


State 94

   27 control: CONTINUE ID .

    $default  reduce using rule 27 (control)


State 95

   29 control: BREAK ID .

    $default  reduce using rule 29 (control)
